RESOLVED FIXED186964
[iPad apps on macOS] Click events are broken in WKWebView
https://bugs.webkit.org/show_bug.cgi?id=186964
Summary [iPad apps on macOS] Click events are broken in WKWebView
Wenson Hsieh
Reported 2018-06-23 02:15:32 PDT
Attachments
Patch (3.56 KB, patch)
2018-06-23 02:36 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-06-23 02:36:50 PDT
WebKit Commit Bot
Comment 2 2018-06-25 11:43:15 PDT
Comment on attachment 343428 [details] Patch Clearing flags on attachment: 343428 Committed r233159: <https://trac.webkit.org/changeset/233159>
WebKit Commit Bot
Comment 3 2018-06-25 11:43:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.